src/terraform/modules/services/search/elasticsearch/templates/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: ${namespace}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-http@kubernetescrd
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0002\", \"comment\": \"TLS Termination on reverse proxy\"}]"
spec:
  rules:
    - host: es.infrastructure.${domain-name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-es-es-http
                port:
                  number: 9200
  tls:
  - secretName: es-cert
    hosts:
    - es.infrastructure.${domain-name}
